# placegpt

./: .gitignore  Procfile  README.md  cli.py  controlnet.py  dev.ipynb  manifest.json  openapi.yaml  pyproject.toml  requirements.txt  server.py
placegpt/: chat_render.py  cli.py  remote_cli.py  render.py  replicate_api.py  server.py
static/: app.js  index.html  styles.css
