[tool.poetry]
name = "placegpt"
version = "0.1.0"
description = ""
authors = ["viksit <viksit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.0"
langchain = "^0.0.141"
jinja2 = "^3.1.2"
quart = "^0.18.4"
quart-cors = "^0.6.0"
openai = "^0.27.4"
click = "^8.1.3"
click-repl = "^0.2.0"
cairosvg = "^2.7.0"
replicate = "^0.8.1"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
